test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_multiplicity/src/deprecated_attr.sw
library;

#[deprecated]
pub struct Ok1 { }

#[deprecated()]
pub struct Ok2 { }

#[deprecated(note = "note")]
pub struct Ok3 { }

#[deprecated(note = "note", note = "other note")]
pub struct NotOk1 { }